# GP

./: .gitignore  XD.txt  start-THS-hot-win32.py.lnk  start-all.bat  startup-HGT.py.lnk  startup-JGD-server.py.lnk  startup-LHB-server.py.lnk  startup-THS-query.py.lnk  startup-THS-server.py.lnk  tdx_2022.9.17.tn6  tdx_2023.1.10.tn6  公式.tn6  我的模式.txt  笔记.docx
BuyTest/: test.py
CPP/TdxPlugin/: CMakeLists.txt  comm.cpp  comm.h  dll.h  dllmain.cpp  hgt.cpp  hgt.h  mysql.cpp  mysql.h  xxv.cpp
CPP/TdxPlugin/dll/: copy.cmd
Common/: base_win.py  ce.py  dialog.py  ext.py  ext_win.py  kline.py  screenlocker.py  sheet.py  table.py  timeline.py
Download/: cls.py  console.py  fiddler.js  fiddler.py  henxin.py  memcache.py  ths_dd_win.py  ths_ddlr.py  ths_f10.py  ths_hygn.py  ths_iwencai.py  同花顺大单.py  开盘啦.py  涨速分析.py  通达信.py
FuPan/: bkgn_kline.py  ddlr.py  ddlr_detail.py  ddlr_struct.py  fupan.py  kpl.py  kpl_2.py  multi_kline.py  tcgn.py  tcgn2.py  tck.py  vol_pm.py  zs.py  复盘.py  复盘_K线对照.py
HGT/: fetch_hgt.py  fetch_hgt_acc.py  orm.py  query.py  startup.py
JGD/: JGD.db  main.py  startup.py  tdx.py
LHB/: data.json  lhb_downloader.py  orm.py  tdx_lhb_downloader.py
Server/: cls_server.py  hot_server.py  lhb_downloader.py  lhb_server.py  startup.py  ths_server.py  ths_zt_downloader.py
THS/: Fillder-CustomRules.cs  base_win.py  basewin.py  download_F10.py  f10_auto_download.py  f10_load_hydb.py  fiddler.py  hot-parser.py  hot-win32.py  hot_parser.py  hot_server.py  hot_simple_win.py  hot_utils.py  hot_win.py  hot_win32.py  hot_win32_simple.py  hot_win_small.py  kline.py  (+23 more)
(+209 files in other folders)
